--- a/css/main.scss
+++ b/css/main.scss
@@ -21,9 +21,10 @@ $third-accent-color: #1798BF;
 //$third-accent-color: #C12D17;
 
 $grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 30%);
+$grey-color-light: lighten($grey-color, 15%);
 $grey-color-legible: lighten($grey-color, 10%);
-$grey-color-dark:  darken($grey-color, 25%);
+$grey-color-darker:  darken($grey-color, 20%);
+$grey-color-dark:  darken($grey-color, 30%);
 
 // Width of the content area
 $content-width:    700px;
